--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title || 'POR Verifier' %></title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="https://cdn.tailwindcss.com" type="application/javascript"></script>
     <link rel="stylesheet" href="/css/styles.css">
     <script>
         tailwind.config = {
